// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons renders Ancora properly 1`] = `
<a
  class="no-underline hover:underline decoration-yellow underline-offset-8"
>
  Teste
</a>
`;

exports[`Buttons renders Button1 properly 1`] = `
<button
  class="h-[48px] w-[169px] left-[16px] top-[16px] rounded-[8px] py-[12px] px-[16px] bg-yellow text-white font-['sans']"
>
  Teste
</button>
`;

exports[`Buttons renders Button2 properly 1`] = `
<button
  class="sc-bdvvtL kBjrjk"
>
  Teste
</button>
`;

exports[`Buttons renders Button3 properly 1`] = `
<button
  class="h-[48px] w-[218px] left-[16px] top-[16px] rounded-[8px] py-[12px] px-[16px] bg-yellow text-white font-['sans']"
>
  Teste
</button>
`;

exports[`Buttons renders Button4 properly 1`] = `
<button
  class="sc-dkPtRN hwZMKS"
>
  Teste
</button>
`;

exports[`Buttons renders Button5 properly 1`] = `
<button
  class="h-[48px] w-[328px] left-[16px] top-[144px] rounded-[8px] py-[12px] px-[16px] bg-yellow text-white font-['sans'] md:w-[215px] mini:w-[250px]"
>
  Teste
</button>
`;

exports[`Buttons renders Button6 properly 1`] = `
<button
  class="sc-gsDKAQ duEQz"
>
  Teste
</button>
`;

exports[`Buttons renders Button7 properly 1`] = `
<button
  class="h-[48px] w-[172px] left-[16px] top-[16px] rounded-[8px] py-[12px] px-[16px] text-white font-['sans'] border-solid border border-white"
>
  Teste
</button>
`;

exports[`Buttons renders Button8 properly 1`] = `
<button
  class="h-[48px] w-[198px] left-[16px] top-[16px] rounded-[8px] py-[12px] px-[16px] text-white font-['sans'] border-solid border border-white"
>
  Teste
</button>
`;

exports[`Buttons renders Li properly 1`] = `
<li
  class="pl-3 rounded-2"
>
  Teste
</li>
`;

exports[`Buttons renders Ul properly 1`] = `
<ul
  class="grid grid-flow-col gap-2 text-white font-['sans'] list-none"
>
  Teste
</ul>
`;
